<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.navigationkotlinproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_myDialog"
            app:destination="@id/myDialog" />
    </fragment>


    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.navigationkotlinproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.navigationkotlinproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />


    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.navigationkotlinproject.Favorite"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/nav_fav"
        android:name="com.example.navigationkotlinproject.ContactFragment"
        android:label="@string/menu_fav"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.navigationkotlinproject.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />
    <dialog
        android:id="@+id/myDialog"
        android:name="com.example.navigationkotlinproject.MyDialog"
        android:label="MyDialog" />


</navigation>